@@ -1,6 +1,7 @@
 DIST holland-1.0.4.tar.gz 437221 RMD160 87604066c352c6ce9d312ca43bcad90b5ecdb2be SHA1 12a01355e48176faf3b7a3f6ecafaf4e37294cdb SHA256 2737a9d3c6a11caca855c9c1a70086b14d4afe60540cecde684849ee5cfeecb7
 DIST holland-1.0.6.tar.gz 435531 RMD160 c5c8a2b9aed1f2483ff9aadc44f0ee192f93b862 SHA1 5c00912d8a08ad6f38f46bce0cae7cfea0d7417f SHA256 f7977094fb7c2b7a483883a25fddb998412777235beac364f2378b8a96aca68a
 EBUILD holland-backup-pgdump-1.0.4.ebuild 692 RMD160 3d5bc258db98d602d4d8e78e75abab4e3f03f903 SHA1 6acce91958af52b716ee19dcba8c2ca9aaa794ee SHA256 81193cf650d03cb584126d25ad03d052e6d8a9eca83985f9cfe58e17932a68ec
+EBUILD holland-backup-pgdump-1.0.6-r1.ebuild 978 RMD160 c02eb4b38ace26947cb5b2a6d8d3f402c0d31d5a SHA1 05c53b83caf18e489b03fec4742b98e4851b59e2 SHA256 1d2cf1774a26ab413579bf97a0f64dd3049d51e47cb45fdd81d27f0e8b912baa
 EBUILD holland-backup-pgdump-1.0.6.ebuild 692 RMD160 53cb5130c0bd97250bedcc8b364e1b5b7cffe122 SHA1 30df1dbc5fa291715ac4e86c53147c753769acaf SHA256 c38e3738ae0ef2e3c8775d00b3f0d5ca4b97d23df4833d523ec6009489b94544
-MISC ChangeLog 1005 RMD160 1f6b530ba00a691d8f0fafd6bc694d490d502b14 SHA1 4bdcbcb98f9f91dd6f1a75ab79f8995a8a018b92 SHA256 a3aefad4215d0097e1820b01c50ea8bcab7b3513f0fe59c4099d569ba869f0fa
+MISC ChangeLog 1175 RMD160 b782cb1e09f49b1db47675f59fff2a64a22613ba SHA1 5cdd356a2b3e0d2b1127773fd7bbd36e7d0052ac SHA256 4d8339dfb3ed9ba46eba8818f88f02d9c4ff3222fbcd7898a3bfdb46b56cb36f
 MISC metadata.xml 299 RMD160 100c4374c3be1b0f7f5471dd57b659d3fc6c4eed SHA1 01b95381417d2dce7668a8aab425daee94550186 SHA256 d8e113548c5c418f482af3e1a1b89b2408e2377ece82ae9b6ae46e60d21704d2
